tests/cases/errors/012_delimiter_in_multiline.nesl
<<<<<<<<<nesl
{
  multiline = (
    R"""pv(first line)pv"""
    {
    R"""pv(second line)pv"""
  )
}
=========nesl